--- a/views/blogs/privates.ejs
+++ b/views/blogs/privates.ejs
@@ -24,7 +24,15 @@
 
 <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold mt-4 text-center">Liste des Blogs Privés</h1>
-    <div id="privateBlogsContainer" class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    <div id="privateBlogsContainer" class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+        <% blogs.forEach(blog => { %>
+            <div class="bg-white p-4 rounded shadow-md">
+                <h2 class="text-xl font-bold"><%= blog.title %></h2>
+                <p class="mt-2"><%= blog.description %></p>
+                <a href="/blog/<%= blog.id %>" class="text-blue-500 hover:underline">Lire plus</a>
+            </div>
+        <% }) %>
+    </div>
 </div>
 
 <script type="module" src="/js/blogs/privates.js"></script>
