--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -16,11 +16,20 @@
   </div>
 </nav>
 
+
 <div class="container mx-auto p-4">
+  <h1 class="text-2xl font-bold mt-4 text-center"><%= blog.title %></h1>
+  <p class="mt-2"><%= blog.description %></p>
 
-  <h1 class="text-2xl font-bold mt-4 text-center">Détails du blog</h1>
-  <div id="blogDetailContainer" class="mt-8 gap-4"></div>
-
+  <h2 class="text-xl font-bold mt-4">Articles</h2>
+  <div class="mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+    <% blog.Articles.forEach(article => { %>
+      <div class="bg-white p-4 rounded shadow-md">
+        <h3 class="text-xl font-bold"><%= article.title %></h3>
+        <p><%= article.content %></p>
+      </div>
+    <% }) %>
+  </div>
 </div>
 
 
