--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -11,8 +11,10 @@
 <nav class="bg-white shadow-md">
   <div class="container mx-auto p-4 flex justify-between items-center">
     <a href="/" class="text-xl font-bold">Home</a>
-    <button id="personalSpaceButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Espace personnel</button>
-    <button id="authButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Connexion</button>
+    <div class="flex gap-4 flex-row">
+      <a href="/personal-space" id="personalSpaceButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Espace personnel</a>
+      <button id="authButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Connexion</button>
+    </div>
   </div>
 </nav>
 
